# serializer version: 1
# name: test_get_standings
  dict({
    'ConstructorStandings': list([
      dict({
        'Constructor': dict({
          'constructorId': 'red_bull',
          'name': 'Red Bull',
          'nationality': 'Austrian',
          'url': 'http://en.wikipedia.org/wiki/Red_Bull_Racing',
        }),
        'points': '141',
        'position': '1',
        'positionText': '1',
        'wins': '3',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'ferrari',
          'name': 'Ferrari',
          'nationality': 'Italian',
          'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
        }),
        'points': '120',
        'position': '2',
        'positionText': '2',
        'wins': '1',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'mclaren',
          'name': 'McLaren',
          'nationality': 'British',
          'url': 'http://en.wikipedia.org/wiki/McLaren',
        }),
        'points': '69',
        'position': '3',
        'positionText': '3',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'mercedes',
          'name': 'Mercedes',
          'nationality': 'German',
          'url': 'http://en.wikipedia.org/wiki/Mercedes-Benz_in_Formula_One',
        }),
        'points': '34',
        'position': '4',
        'positionText': '4',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'aston_martin',
          'name': 'Aston Martin',
          'nationality': 'British',
          'url': 'http://en.wikipedia.org/wiki/Aston_Martin_in_Formula_One',
        }),
        'points': '33',
        'position': '5',
        'positionText': '5',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'rb',
          'name': 'RB F1 Team',
          'nationality': 'Italian',
          'url': 'http://en.wikipedia.org/wiki/RB_Formula_One_Team',
        }),
        'points': '7',
        'position': '6',
        'positionText': '6',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'haas',
          'name': 'Haas F1 Team',
          'nationality': 'American',
          'url': 'http://en.wikipedia.org/wiki/Haas_F1_Team',
        }),
        'points': '4',
        'position': '7',
        'positionText': '7',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'williams',
          'name': 'Williams',
          'nationality': 'British',
          'url': 'http://en.wikipedia.org/wiki/Williams_Grand_Prix_Engineering',
        }),
        'points': '0',
        'position': '8',
        'positionText': '8',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'sauber',
          'name': 'Sauber',
          'nationality': 'Swiss',
          'url': 'http://en.wikipedia.org/wiki/Sauber_Motorsport',
        }),
        'points': '0',
        'position': '9',
        'positionText': '9',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'alpine',
          'name': 'Alpine F1 Team',
          'nationality': 'French',
          'url': 'http://en.wikipedia.org/wiki/Alpine_F1_Team',
        }),
        'points': '0',
        'position': '10',
        'positionText': '10',
        'wins': '0',
      }),
    ]),
    'DriverStandings': list([
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'red_bull',
            'name': 'Red Bull',
            'nationality': 'Austrian',
            'url': 'http://en.wikipedia.org/wiki/Red_Bull_Racing',
          }),
        ]),
        'Driver': dict({
          'code': 'VER',
          'dateOfBirth': '1997-09-30',
          'driverId': 'max_verstappen',
          'familyName': 'Verstappen',
          'givenName': 'Max',
          'nationality': 'Dutch',
          'permanentNumber': '33',
          'url': 'http://en.wikipedia.org/wiki/Max_Verstappen',
        }),
        'points': '77',
        'position': '1',
        'positionText': '1',
        'wins': '3',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'red_bull',
            'name': 'Red Bull',
            'nationality': 'Austrian',
            'url': 'http://en.wikipedia.org/wiki/Red_Bull_Racing',
          }),
        ]),
        'Driver': dict({
          'code': 'PER',
          'dateOfBirth': '1990-01-26',
          'driverId': 'perez',
          'familyName': 'Pérez',
          'givenName': 'Sergio',
          'nationality': 'Mexican',
          'permanentNumber': '11',
          'url': 'http://en.wikipedia.org/wiki/Sergio_P%C3%A9rez',
        }),
        'points': '64',
        'position': '2',
        'positionText': '2',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'ferrari',
            'name': 'Ferrari',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
          }),
        ]),
        'Driver': dict({
          'code': 'LEC',
          'dateOfBirth': '1997-10-16',
          'driverId': 'leclerc',
          'familyName': 'Leclerc',
          'givenName': 'Charles',
          'nationality': 'Monegasque',
          'permanentNumber': '16',
          'url': 'http://en.wikipedia.org/wiki/Charles_Leclerc',
        }),
        'points': '59',
        'position': '3',
        'positionText': '3',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'ferrari',
            'name': 'Ferrari',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
          }),
        ]),
        'Driver': dict({
          'code': 'SAI',
          'dateOfBirth': '1994-09-01',
          'driverId': 'sainz',
          'familyName': 'Sainz',
          'givenName': 'Carlos',
          'nationality': 'Spanish',
          'permanentNumber': '55',
          'url': 'http://en.wikipedia.org/wiki/Carlos_Sainz_Jr.',
        }),
        'points': '55',
        'position': '4',
        'positionText': '4',
        'wins': '1',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mclaren',
            'name': 'McLaren',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/McLaren',
          }),
        ]),
        'Driver': dict({
          'code': 'NOR',
          'dateOfBirth': '1999-11-13',
          'driverId': 'norris',
          'familyName': 'Norris',
          'givenName': 'Lando',
          'nationality': 'British',
          'permanentNumber': '4',
          'url': 'http://en.wikipedia.org/wiki/Lando_Norris',
        }),
        'points': '37',
        'position': '5',
        'positionText': '5',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mclaren',
            'name': 'McLaren',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/McLaren',
          }),
        ]),
        'Driver': dict({
          'code': 'PIA',
          'dateOfBirth': '2001-04-06',
          'driverId': 'piastri',
          'familyName': 'Piastri',
          'givenName': 'Oscar',
          'nationality': 'Australian',
          'permanentNumber': '81',
          'url': 'http://en.wikipedia.org/wiki/Oscar_Piastri',
        }),
        'points': '32',
        'position': '6',
        'positionText': '6',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mercedes',
            'name': 'Mercedes',
            'nationality': 'German',
            'url': 'http://en.wikipedia.org/wiki/Mercedes-Benz_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'RUS',
          'dateOfBirth': '1998-02-15',
          'driverId': 'russell',
          'familyName': 'Russell',
          'givenName': 'George',
          'nationality': 'British',
          'permanentNumber': '63',
          'url': 'http://en.wikipedia.org/wiki/George_Russell_(racing_driver)',
        }),
        'points': '24',
        'position': '7',
        'positionText': '7',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'aston_martin',
            'name': 'Aston Martin',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Aston_Martin_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'ALO',
          'dateOfBirth': '1981-07-29',
          'driverId': 'alonso',
          'familyName': 'Alonso',
          'givenName': 'Fernando',
          'nationality': 'Spanish',
          'permanentNumber': '14',
          'url': 'http://en.wikipedia.org/wiki/Fernando_Alonso',
        }),
        'points': '24',
        'position': '8',
        'positionText': '8',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mercedes',
            'name': 'Mercedes',
            'nationality': 'German',
            'url': 'http://en.wikipedia.org/wiki/Mercedes-Benz_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'HAM',
          'dateOfBirth': '1985-01-07',
          'driverId': 'hamilton',
          'familyName': 'Hamilton',
          'givenName': 'Lewis',
          'nationality': 'British',
          'permanentNumber': '44',
          'url': 'http://en.wikipedia.org/wiki/Lewis_Hamilton',
        }),
        'points': '10',
        'position': '9',
        'positionText': '9',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'aston_martin',
            'name': 'Aston Martin',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Aston_Martin_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'STR',
          'dateOfBirth': '1998-10-29',
          'driverId': 'stroll',
          'familyName': 'Stroll',
          'givenName': 'Lance',
          'nationality': 'Canadian',
          'permanentNumber': '18',
          'url': 'http://en.wikipedia.org/wiki/Lance_Stroll',
        }),
        'points': '9',
        'position': '10',
        'positionText': '10',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'rb',
            'name': 'RB F1 Team',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/RB_Formula_One_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'TSU',
          'dateOfBirth': '2000-05-11',
          'driverId': 'tsunoda',
          'familyName': 'Tsunoda',
          'givenName': 'Yuki',
          'nationality': 'Japanese',
          'permanentNumber': '22',
          'url': 'http://en.wikipedia.org/wiki/Yuki_Tsunoda',
        }),
        'points': '7',
        'position': '11',
        'positionText': '11',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'ferrari',
            'name': 'Ferrari',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
          }),
        ]),
        'Driver': dict({
          'code': 'BEA',
          'dateOfBirth': '2005-05-08',
          'driverId': 'bearman',
          'familyName': 'Bearman',
          'givenName': 'Oliver',
          'nationality': 'British',
          'permanentNumber': '38',
          'url': 'http://en.wikipedia.org/wiki/Oliver_Bearman',
        }),
        'points': '6',
        'position': '12',
        'positionText': '12',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'haas',
            'name': 'Haas F1 Team',
            'nationality': 'American',
            'url': 'http://en.wikipedia.org/wiki/Haas_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'HUL',
          'dateOfBirth': '1987-08-19',
          'driverId': 'hulkenberg',
          'familyName': 'Hülkenberg',
          'givenName': 'Nico',
          'nationality': 'German',
          'permanentNumber': '27',
          'url': 'http://en.wikipedia.org/wiki/Nico_H%C3%BClkenberg',
        }),
        'points': '3',
        'position': '13',
        'positionText': '13',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'haas',
            'name': 'Haas F1 Team',
            'nationality': 'American',
            'url': 'http://en.wikipedia.org/wiki/Haas_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'MAG',
          'dateOfBirth': '1992-10-05',
          'driverId': 'kevin_magnussen',
          'familyName': 'Magnussen',
          'givenName': 'Kevin',
          'nationality': 'Danish',
          'permanentNumber': '20',
          'url': 'http://en.wikipedia.org/wiki/Kevin_Magnussen',
        }),
        'points': '1',
        'position': '14',
        'positionText': '14',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'williams',
            'name': 'Williams',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Williams_Grand_Prix_Engineering',
          }),
        ]),
        'Driver': dict({
          'code': 'ALB',
          'dateOfBirth': '1996-03-23',
          'driverId': 'albon',
          'familyName': 'Albon',
          'givenName': 'Alexander',
          'nationality': 'Thai',
          'permanentNumber': '23',
          'url': 'http://en.wikipedia.org/wiki/Alexander_Albon',
        }),
        'points': '0',
        'position': '15',
        'positionText': '15',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'sauber',
            'name': 'Sauber',
            'nationality': 'Swiss',
            'url': 'http://en.wikipedia.org/wiki/Sauber_Motorsport',
          }),
        ]),
        'Driver': dict({
          'code': 'ZHO',
          'dateOfBirth': '1999-05-30',
          'driverId': 'zhou',
          'familyName': 'Zhou',
          'givenName': 'Guanyu',
          'nationality': 'Chinese',
          'permanentNumber': '24',
          'url': 'http://en.wikipedia.org/wiki/Zhou_Guanyu',
        }),
        'points': '0',
        'position': '16',
        'positionText': '16',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'rb',
            'name': 'RB F1 Team',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/RB_Formula_One_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'RIC',
          'dateOfBirth': '1989-07-01',
          'driverId': 'ricciardo',
          'familyName': 'Ricciardo',
          'givenName': 'Daniel',
          'nationality': 'Australian',
          'permanentNumber': '3',
          'url': 'http://en.wikipedia.org/wiki/Daniel_Ricciardo',
        }),
        'points': '0',
        'position': '17',
        'positionText': '17',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alpine',
            'name': 'Alpine F1 Team',
            'nationality': 'French',
            'url': 'http://en.wikipedia.org/wiki/Alpine_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'OCO',
          'dateOfBirth': '1996-09-17',
          'driverId': 'ocon',
          'familyName': 'Ocon',
          'givenName': 'Esteban',
          'nationality': 'French',
          'permanentNumber': '31',
          'url': 'http://en.wikipedia.org/wiki/Esteban_Ocon',
        }),
        'points': '0',
        'position': '18',
        'positionText': '18',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alpine',
            'name': 'Alpine F1 Team',
            'nationality': 'French',
            'url': 'http://en.wikipedia.org/wiki/Alpine_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'GAS',
          'dateOfBirth': '1996-02-07',
          'driverId': 'gasly',
          'familyName': 'Gasly',
          'givenName': 'Pierre',
          'nationality': 'French',
          'permanentNumber': '10',
          'url': 'http://en.wikipedia.org/wiki/Pierre_Gasly',
        }),
        'points': '0',
        'position': '19',
        'positionText': '19',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'sauber',
            'name': 'Sauber',
            'nationality': 'Swiss',
            'url': 'http://en.wikipedia.org/wiki/Sauber_Motorsport',
          }),
        ]),
        'Driver': dict({
          'code': 'BOT',
          'dateOfBirth': '1989-08-28',
          'driverId': 'bottas',
          'familyName': 'Bottas',
          'givenName': 'Valtteri',
          'nationality': 'Finnish',
          'permanentNumber': '77',
          'url': 'http://en.wikipedia.org/wiki/Valtteri_Bottas',
        }),
        'points': '0',
        'position': '20',
        'positionText': '20',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'williams',
            'name': 'Williams',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Williams_Grand_Prix_Engineering',
          }),
        ]),
        'Driver': dict({
          'code': 'SAR',
          'dateOfBirth': '2000-12-31',
          'driverId': 'sargeant',
          'familyName': 'Sargeant',
          'givenName': 'Logan',
          'nationality': 'American',
          'permanentNumber': '2',
          'url': 'http://en.wikipedia.org/wiki/Logan_Sargeant',
        }),
        'points': '0',
        'position': '21',
        'positionText': '21',
        'wins': '0',
      }),
    ]),
    'round': 4,
    'season': 2024,
  })
# ---
# name: test_get_standings_bad_year_no_input
  dict({
    'detail': 'Bad request. Must provide the "year" parameter.',
  })
# ---
# name: test_get_standings_good_year_and_round
  dict({
    'ConstructorStandings': list([
      dict({
        'Constructor': dict({
          'constructorId': 'red_bull',
          'name': 'Red Bull',
          'nationality': 'Austrian',
          'url': 'http://en.wikipedia.org/wiki/Red_Bull_Racing',
        }),
        'points': '224',
        'position': '1',
        'positionText': '1',
        'wins': '5',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'aston_martin',
          'name': 'Aston Martin',
          'nationality': 'British',
          'url': 'http://en.wikipedia.org/wiki/Aston_Martin_in_Formula_One',
        }),
        'points': '102',
        'position': '2',
        'positionText': '2',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'mercedes',
          'name': 'Mercedes',
          'nationality': 'German',
          'url': 'http://en.wikipedia.org/wiki/Mercedes-Benz_in_Formula_One',
        }),
        'points': '96',
        'position': '3',
        'positionText': '3',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'ferrari',
          'name': 'Ferrari',
          'nationality': 'Italian',
          'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
        }),
        'points': '78',
        'position': '4',
        'positionText': '4',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'mclaren',
          'name': 'McLaren',
          'nationality': 'British',
          'url': 'http://en.wikipedia.org/wiki/McLaren',
        }),
        'points': '14',
        'position': '5',
        'positionText': '5',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'alpine',
          'name': 'Alpine F1 Team',
          'nationality': 'French',
          'url': 'http://en.wikipedia.org/wiki/Alpine_F1_Team',
        }),
        'points': '14',
        'position': '6',
        'positionText': '6',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'haas',
          'name': 'Haas F1 Team',
          'nationality': 'American',
          'url': 'http://en.wikipedia.org/wiki/Haas_F1_Team',
        }),
        'points': '8',
        'position': '7',
        'positionText': '7',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'alfa',
          'name': 'Alfa Romeo',
          'nationality': 'Swiss',
          'url': 'http://en.wikipedia.org/wiki/Alfa_Romeo_in_Formula_One',
        }),
        'points': '6',
        'position': '8',
        'positionText': '8',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'alphatauri',
          'name': 'AlphaTauri',
          'nationality': 'Italian',
          'url': 'http://en.wikipedia.org/wiki/Scuderia_AlphaTauri',
        }),
        'points': '2',
        'position': '9',
        'positionText': '9',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'williams',
          'name': 'Williams',
          'nationality': 'British',
          'url': 'http://en.wikipedia.org/wiki/Williams_Grand_Prix_Engineering',
        }),
        'points': '1',
        'position': '10',
        'positionText': '10',
        'wins': '0',
      }),
    ]),
    'DriverStandings': list([
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'red_bull',
            'name': 'Red Bull',
            'nationality': 'Austrian',
            'url': 'http://en.wikipedia.org/wiki/Red_Bull_Racing',
          }),
        ]),
        'Driver': dict({
          'code': 'VER',
          'dateOfBirth': '1997-09-30',
          'driverId': 'max_verstappen',
          'familyName': 'Verstappen',
          'givenName': 'Max',
          'nationality': 'Dutch',
          'permanentNumber': '33',
          'url': 'http://en.wikipedia.org/wiki/Max_Verstappen',
        }),
        'points': '119',
        'position': '1',
        'positionText': '1',
        'wins': '3',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'red_bull',
            'name': 'Red Bull',
            'nationality': 'Austrian',
            'url': 'http://en.wikipedia.org/wiki/Red_Bull_Racing',
          }),
        ]),
        'Driver': dict({
          'code': 'PER',
          'dateOfBirth': '1990-01-26',
          'driverId': 'perez',
          'familyName': 'Pérez',
          'givenName': 'Sergio',
          'nationality': 'Mexican',
          'permanentNumber': '11',
          'url': 'http://en.wikipedia.org/wiki/Sergio_P%C3%A9rez',
        }),
        'points': '105',
        'position': '2',
        'positionText': '2',
        'wins': '2',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'aston_martin',
            'name': 'Aston Martin',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Aston_Martin_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'ALO',
          'dateOfBirth': '1981-07-29',
          'driverId': 'alonso',
          'familyName': 'Alonso',
          'givenName': 'Fernando',
          'nationality': 'Spanish',
          'permanentNumber': '14',
          'url': 'http://en.wikipedia.org/wiki/Fernando_Alonso',
        }),
        'points': '75',
        'position': '3',
        'positionText': '3',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mercedes',
            'name': 'Mercedes',
            'nationality': 'German',
            'url': 'http://en.wikipedia.org/wiki/Mercedes-Benz_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'HAM',
          'dateOfBirth': '1985-01-07',
          'driverId': 'hamilton',
          'familyName': 'Hamilton',
          'givenName': 'Lewis',
          'nationality': 'British',
          'permanentNumber': '44',
          'url': 'http://en.wikipedia.org/wiki/Lewis_Hamilton',
        }),
        'points': '56',
        'position': '4',
        'positionText': '4',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'ferrari',
            'name': 'Ferrari',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
          }),
        ]),
        'Driver': dict({
          'code': 'SAI',
          'dateOfBirth': '1994-09-01',
          'driverId': 'sainz',
          'familyName': 'Sainz',
          'givenName': 'Carlos',
          'nationality': 'Spanish',
          'permanentNumber': '55',
          'url': 'http://en.wikipedia.org/wiki/Carlos_Sainz_Jr.',
        }),
        'points': '44',
        'position': '5',
        'positionText': '5',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mercedes',
            'name': 'Mercedes',
            'nationality': 'German',
            'url': 'http://en.wikipedia.org/wiki/Mercedes-Benz_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'RUS',
          'dateOfBirth': '1998-02-15',
          'driverId': 'russell',
          'familyName': 'Russell',
          'givenName': 'George',
          'nationality': 'British',
          'permanentNumber': '63',
          'url': 'http://en.wikipedia.org/wiki/George_Russell_(racing_driver)',
        }),
        'points': '40',
        'position': '6',
        'positionText': '6',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'ferrari',
            'name': 'Ferrari',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
          }),
        ]),
        'Driver': dict({
          'code': 'LEC',
          'dateOfBirth': '1997-10-16',
          'driverId': 'leclerc',
          'familyName': 'Leclerc',
          'givenName': 'Charles',
          'nationality': 'Monegasque',
          'permanentNumber': '16',
          'url': 'http://en.wikipedia.org/wiki/Charles_Leclerc',
        }),
        'points': '34',
        'position': '7',
        'positionText': '7',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'aston_martin',
            'name': 'Aston Martin',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Aston_Martin_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'STR',
          'dateOfBirth': '1998-10-29',
          'driverId': 'stroll',
          'familyName': 'Stroll',
          'givenName': 'Lance',
          'nationality': 'Canadian',
          'permanentNumber': '18',
          'url': 'http://en.wikipedia.org/wiki/Lance_Stroll',
        }),
        'points': '27',
        'position': '8',
        'positionText': '8',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mclaren',
            'name': 'McLaren',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/McLaren',
          }),
        ]),
        'Driver': dict({
          'code': 'NOR',
          'dateOfBirth': '1999-11-13',
          'driverId': 'norris',
          'familyName': 'Norris',
          'givenName': 'Lando',
          'nationality': 'British',
          'permanentNumber': '4',
          'url': 'http://en.wikipedia.org/wiki/Lando_Norris',
        }),
        'points': '10',
        'position': '9',
        'positionText': '9',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alpine',
            'name': 'Alpine F1 Team',
            'nationality': 'French',
            'url': 'http://en.wikipedia.org/wiki/Alpine_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'GAS',
          'dateOfBirth': '1996-02-07',
          'driverId': 'gasly',
          'familyName': 'Gasly',
          'givenName': 'Pierre',
          'nationality': 'French',
          'permanentNumber': '10',
          'url': 'http://en.wikipedia.org/wiki/Pierre_Gasly',
        }),
        'points': '8',
        'position': '10',
        'positionText': '10',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'haas',
            'name': 'Haas F1 Team',
            'nationality': 'American',
            'url': 'http://en.wikipedia.org/wiki/Haas_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'HUL',
          'dateOfBirth': '1987-08-19',
          'driverId': 'hulkenberg',
          'familyName': 'Hülkenberg',
          'givenName': 'Nico',
          'nationality': 'German',
          'permanentNumber': '27',
          'url': 'http://en.wikipedia.org/wiki/Nico_H%C3%BClkenberg',
        }),
        'points': '6',
        'position': '11',
        'positionText': '11',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alpine',
            'name': 'Alpine F1 Team',
            'nationality': 'French',
            'url': 'http://en.wikipedia.org/wiki/Alpine_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'OCO',
          'dateOfBirth': '1996-09-17',
          'driverId': 'ocon',
          'familyName': 'Ocon',
          'givenName': 'Esteban',
          'nationality': 'French',
          'permanentNumber': '31',
          'url': 'http://en.wikipedia.org/wiki/Esteban_Ocon',
        }),
        'points': '6',
        'position': '12',
        'positionText': '12',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alfa',
            'name': 'Alfa Romeo',
            'nationality': 'Swiss',
            'url': 'http://en.wikipedia.org/wiki/Alfa_Romeo_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'BOT',
          'dateOfBirth': '1989-08-28',
          'driverId': 'bottas',
          'familyName': 'Bottas',
          'givenName': 'Valtteri',
          'nationality': 'Finnish',
          'permanentNumber': '77',
          'url': 'http://en.wikipedia.org/wiki/Valtteri_Bottas',
        }),
        'points': '4',
        'position': '13',
        'positionText': '13',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mclaren',
            'name': 'McLaren',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/McLaren',
          }),
        ]),
        'Driver': dict({
          'code': 'PIA',
          'dateOfBirth': '2001-04-06',
          'driverId': 'piastri',
          'familyName': 'Piastri',
          'givenName': 'Oscar',
          'nationality': 'Australian',
          'permanentNumber': '81',
          'url': 'http://en.wikipedia.org/wiki/Oscar_Piastri',
        }),
        'points': '4',
        'position': '14',
        'positionText': '14',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alfa',
            'name': 'Alfa Romeo',
            'nationality': 'Swiss',
            'url': 'http://en.wikipedia.org/wiki/Alfa_Romeo_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'ZHO',
          'dateOfBirth': '1999-05-30',
          'driverId': 'zhou',
          'familyName': 'Zhou',
          'givenName': 'Guanyu',
          'nationality': 'Chinese',
          'permanentNumber': '24',
          'url': 'http://en.wikipedia.org/wiki/Zhou_Guanyu',
        }),
        'points': '2',
        'position': '15',
        'positionText': '15',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alphatauri',
            'name': 'AlphaTauri',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_AlphaTauri',
          }),
        ]),
        'Driver': dict({
          'code': 'TSU',
          'dateOfBirth': '2000-05-11',
          'driverId': 'tsunoda',
          'familyName': 'Tsunoda',
          'givenName': 'Yuki',
          'nationality': 'Japanese',
          'permanentNumber': '22',
          'url': 'http://en.wikipedia.org/wiki/Yuki_Tsunoda',
        }),
        'points': '2',
        'position': '16',
        'positionText': '16',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'haas',
            'name': 'Haas F1 Team',
            'nationality': 'American',
            'url': 'http://en.wikipedia.org/wiki/Haas_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'MAG',
          'dateOfBirth': '1992-10-05',
          'driverId': 'kevin_magnussen',
          'familyName': 'Magnussen',
          'givenName': 'Kevin',
          'nationality': 'Danish',
          'permanentNumber': '20',
          'url': 'http://en.wikipedia.org/wiki/Kevin_Magnussen',
        }),
        'points': '2',
        'position': '17',
        'positionText': '17',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'williams',
            'name': 'Williams',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Williams_Grand_Prix_Engineering',
          }),
        ]),
        'Driver': dict({
          'code': 'ALB',
          'dateOfBirth': '1996-03-23',
          'driverId': 'albon',
          'familyName': 'Albon',
          'givenName': 'Alexander',
          'nationality': 'Thai',
          'permanentNumber': '23',
          'url': 'http://en.wikipedia.org/wiki/Alexander_Albon',
        }),
        'points': '1',
        'position': '18',
        'positionText': '18',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'williams',
            'name': 'Williams',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Williams_Grand_Prix_Engineering',
          }),
        ]),
        'Driver': dict({
          'code': 'SAR',
          'dateOfBirth': '2000-12-31',
          'driverId': 'sargeant',
          'familyName': 'Sargeant',
          'givenName': 'Logan',
          'nationality': 'American',
          'permanentNumber': '2',
          'url': 'http://en.wikipedia.org/wiki/Logan_Sargeant',
        }),
        'points': '0',
        'position': '19',
        'positionText': '19',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alphatauri',
            'name': 'AlphaTauri',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_AlphaTauri',
          }),
        ]),
        'Driver': dict({
          'code': 'DEV',
          'dateOfBirth': '1995-02-06',
          'driverId': 'de_vries',
          'familyName': 'de Vries',
          'givenName': 'Nyck',
          'nationality': 'Dutch',
          'permanentNumber': '21',
          'url': 'http://en.wikipedia.org/wiki/Nyck_de_Vries',
        }),
        'points': '0',
        'position': '20',
        'positionText': '20',
        'wins': '0',
      }),
    ]),
    'round': 5,
    'season': 2023,
  })
# ---
# name: test_get_standings_good_year_only
  dict({
    'ConstructorStandings': list([
      dict({
        'Constructor': dict({
          'constructorId': 'red_bull',
          'name': 'Red Bull',
          'nationality': 'Austrian',
          'url': 'http://en.wikipedia.org/wiki/Red_Bull_Racing',
        }),
        'points': '860',
        'position': '1',
        'positionText': '1',
        'wins': '21',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'mercedes',
          'name': 'Mercedes',
          'nationality': 'German',
          'url': 'http://en.wikipedia.org/wiki/Mercedes-Benz_in_Formula_One',
        }),
        'points': '409',
        'position': '2',
        'positionText': '2',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'ferrari',
          'name': 'Ferrari',
          'nationality': 'Italian',
          'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
        }),
        'points': '406',
        'position': '3',
        'positionText': '3',
        'wins': '1',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'mclaren',
          'name': 'McLaren',
          'nationality': 'British',
          'url': 'http://en.wikipedia.org/wiki/McLaren',
        }),
        'points': '302',
        'position': '4',
        'positionText': '4',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'aston_martin',
          'name': 'Aston Martin',
          'nationality': 'British',
          'url': 'http://en.wikipedia.org/wiki/Aston_Martin_in_Formula_One',
        }),
        'points': '280',
        'position': '5',
        'positionText': '5',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'alpine',
          'name': 'Alpine F1 Team',
          'nationality': 'French',
          'url': 'http://en.wikipedia.org/wiki/Alpine_F1_Team',
        }),
        'points': '120',
        'position': '6',
        'positionText': '6',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'williams',
          'name': 'Williams',
          'nationality': 'British',
          'url': 'http://en.wikipedia.org/wiki/Williams_Grand_Prix_Engineering',
        }),
        'points': '28',
        'position': '7',
        'positionText': '7',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'alphatauri',
          'name': 'AlphaTauri',
          'nationality': 'Italian',
          'url': 'http://en.wikipedia.org/wiki/Scuderia_AlphaTauri',
        }),
        'points': '25',
        'position': '8',
        'positionText': '8',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'alfa',
          'name': 'Alfa Romeo',
          'nationality': 'Swiss',
          'url': 'http://en.wikipedia.org/wiki/Alfa_Romeo_in_Formula_One',
        }),
        'points': '16',
        'position': '9',
        'positionText': '9',
        'wins': '0',
      }),
      dict({
        'Constructor': dict({
          'constructorId': 'haas',
          'name': 'Haas F1 Team',
          'nationality': 'American',
          'url': 'http://en.wikipedia.org/wiki/Haas_F1_Team',
        }),
        'points': '12',
        'position': '10',
        'positionText': '10',
        'wins': '0',
      }),
    ]),
    'DriverStandings': list([
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'red_bull',
            'name': 'Red Bull',
            'nationality': 'Austrian',
            'url': 'http://en.wikipedia.org/wiki/Red_Bull_Racing',
          }),
        ]),
        'Driver': dict({
          'code': 'VER',
          'dateOfBirth': '1997-09-30',
          'driverId': 'max_verstappen',
          'familyName': 'Verstappen',
          'givenName': 'Max',
          'nationality': 'Dutch',
          'permanentNumber': '33',
          'url': 'http://en.wikipedia.org/wiki/Max_Verstappen',
        }),
        'points': '575',
        'position': '1',
        'positionText': '1',
        'wins': '19',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'red_bull',
            'name': 'Red Bull',
            'nationality': 'Austrian',
            'url': 'http://en.wikipedia.org/wiki/Red_Bull_Racing',
          }),
        ]),
        'Driver': dict({
          'code': 'PER',
          'dateOfBirth': '1990-01-26',
          'driverId': 'perez',
          'familyName': 'Pérez',
          'givenName': 'Sergio',
          'nationality': 'Mexican',
          'permanentNumber': '11',
          'url': 'http://en.wikipedia.org/wiki/Sergio_P%C3%A9rez',
        }),
        'points': '285',
        'position': '2',
        'positionText': '2',
        'wins': '2',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mercedes',
            'name': 'Mercedes',
            'nationality': 'German',
            'url': 'http://en.wikipedia.org/wiki/Mercedes-Benz_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'HAM',
          'dateOfBirth': '1985-01-07',
          'driverId': 'hamilton',
          'familyName': 'Hamilton',
          'givenName': 'Lewis',
          'nationality': 'British',
          'permanentNumber': '44',
          'url': 'http://en.wikipedia.org/wiki/Lewis_Hamilton',
        }),
        'points': '234',
        'position': '3',
        'positionText': '3',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'aston_martin',
            'name': 'Aston Martin',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Aston_Martin_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'ALO',
          'dateOfBirth': '1981-07-29',
          'driverId': 'alonso',
          'familyName': 'Alonso',
          'givenName': 'Fernando',
          'nationality': 'Spanish',
          'permanentNumber': '14',
          'url': 'http://en.wikipedia.org/wiki/Fernando_Alonso',
        }),
        'points': '206',
        'position': '4',
        'positionText': '4',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'ferrari',
            'name': 'Ferrari',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
          }),
        ]),
        'Driver': dict({
          'code': 'LEC',
          'dateOfBirth': '1997-10-16',
          'driverId': 'leclerc',
          'familyName': 'Leclerc',
          'givenName': 'Charles',
          'nationality': 'Monegasque',
          'permanentNumber': '16',
          'url': 'http://en.wikipedia.org/wiki/Charles_Leclerc',
        }),
        'points': '206',
        'position': '5',
        'positionText': '5',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mclaren',
            'name': 'McLaren',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/McLaren',
          }),
        ]),
        'Driver': dict({
          'code': 'NOR',
          'dateOfBirth': '1999-11-13',
          'driverId': 'norris',
          'familyName': 'Norris',
          'givenName': 'Lando',
          'nationality': 'British',
          'permanentNumber': '4',
          'url': 'http://en.wikipedia.org/wiki/Lando_Norris',
        }),
        'points': '205',
        'position': '6',
        'positionText': '6',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'ferrari',
            'name': 'Ferrari',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_Ferrari',
          }),
        ]),
        'Driver': dict({
          'code': 'SAI',
          'dateOfBirth': '1994-09-01',
          'driverId': 'sainz',
          'familyName': 'Sainz',
          'givenName': 'Carlos',
          'nationality': 'Spanish',
          'permanentNumber': '55',
          'url': 'http://en.wikipedia.org/wiki/Carlos_Sainz_Jr.',
        }),
        'points': '200',
        'position': '7',
        'positionText': '7',
        'wins': '1',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mercedes',
            'name': 'Mercedes',
            'nationality': 'German',
            'url': 'http://en.wikipedia.org/wiki/Mercedes-Benz_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'RUS',
          'dateOfBirth': '1998-02-15',
          'driverId': 'russell',
          'familyName': 'Russell',
          'givenName': 'George',
          'nationality': 'British',
          'permanentNumber': '63',
          'url': 'http://en.wikipedia.org/wiki/George_Russell_(racing_driver)',
        }),
        'points': '175',
        'position': '8',
        'positionText': '8',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'mclaren',
            'name': 'McLaren',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/McLaren',
          }),
        ]),
        'Driver': dict({
          'code': 'PIA',
          'dateOfBirth': '2001-04-06',
          'driverId': 'piastri',
          'familyName': 'Piastri',
          'givenName': 'Oscar',
          'nationality': 'Australian',
          'permanentNumber': '81',
          'url': 'http://en.wikipedia.org/wiki/Oscar_Piastri',
        }),
        'points': '97',
        'position': '9',
        'positionText': '9',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'aston_martin',
            'name': 'Aston Martin',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Aston_Martin_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'STR',
          'dateOfBirth': '1998-10-29',
          'driverId': 'stroll',
          'familyName': 'Stroll',
          'givenName': 'Lance',
          'nationality': 'Canadian',
          'permanentNumber': '18',
          'url': 'http://en.wikipedia.org/wiki/Lance_Stroll',
        }),
        'points': '74',
        'position': '10',
        'positionText': '10',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alpine',
            'name': 'Alpine F1 Team',
            'nationality': 'French',
            'url': 'http://en.wikipedia.org/wiki/Alpine_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'GAS',
          'dateOfBirth': '1996-02-07',
          'driverId': 'gasly',
          'familyName': 'Gasly',
          'givenName': 'Pierre',
          'nationality': 'French',
          'permanentNumber': '10',
          'url': 'http://en.wikipedia.org/wiki/Pierre_Gasly',
        }),
        'points': '62',
        'position': '11',
        'positionText': '11',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alpine',
            'name': 'Alpine F1 Team',
            'nationality': 'French',
            'url': 'http://en.wikipedia.org/wiki/Alpine_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'OCO',
          'dateOfBirth': '1996-09-17',
          'driverId': 'ocon',
          'familyName': 'Ocon',
          'givenName': 'Esteban',
          'nationality': 'French',
          'permanentNumber': '31',
          'url': 'http://en.wikipedia.org/wiki/Esteban_Ocon',
        }),
        'points': '58',
        'position': '12',
        'positionText': '12',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'williams',
            'name': 'Williams',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Williams_Grand_Prix_Engineering',
          }),
        ]),
        'Driver': dict({
          'code': 'ALB',
          'dateOfBirth': '1996-03-23',
          'driverId': 'albon',
          'familyName': 'Albon',
          'givenName': 'Alexander',
          'nationality': 'Thai',
          'permanentNumber': '23',
          'url': 'http://en.wikipedia.org/wiki/Alexander_Albon',
        }),
        'points': '27',
        'position': '13',
        'positionText': '13',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alphatauri',
            'name': 'AlphaTauri',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_AlphaTauri',
          }),
        ]),
        'Driver': dict({
          'code': 'TSU',
          'dateOfBirth': '2000-05-11',
          'driverId': 'tsunoda',
          'familyName': 'Tsunoda',
          'givenName': 'Yuki',
          'nationality': 'Japanese',
          'permanentNumber': '22',
          'url': 'http://en.wikipedia.org/wiki/Yuki_Tsunoda',
        }),
        'points': '17',
        'position': '14',
        'positionText': '14',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alfa',
            'name': 'Alfa Romeo',
            'nationality': 'Swiss',
            'url': 'http://en.wikipedia.org/wiki/Alfa_Romeo_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'BOT',
          'dateOfBirth': '1989-08-28',
          'driverId': 'bottas',
          'familyName': 'Bottas',
          'givenName': 'Valtteri',
          'nationality': 'Finnish',
          'permanentNumber': '77',
          'url': 'http://en.wikipedia.org/wiki/Valtteri_Bottas',
        }),
        'points': '10',
        'position': '15',
        'positionText': '15',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'haas',
            'name': 'Haas F1 Team',
            'nationality': 'American',
            'url': 'http://en.wikipedia.org/wiki/Haas_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'HUL',
          'dateOfBirth': '1987-08-19',
          'driverId': 'hulkenberg',
          'familyName': 'Hülkenberg',
          'givenName': 'Nico',
          'nationality': 'German',
          'permanentNumber': '27',
          'url': 'http://en.wikipedia.org/wiki/Nico_H%C3%BClkenberg',
        }),
        'points': '9',
        'position': '16',
        'positionText': '16',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alphatauri',
            'name': 'AlphaTauri',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_AlphaTauri',
          }),
        ]),
        'Driver': dict({
          'code': 'RIC',
          'dateOfBirth': '1989-07-01',
          'driverId': 'ricciardo',
          'familyName': 'Ricciardo',
          'givenName': 'Daniel',
          'nationality': 'Australian',
          'permanentNumber': '3',
          'url': 'http://en.wikipedia.org/wiki/Daniel_Ricciardo',
        }),
        'points': '6',
        'position': '17',
        'positionText': '17',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alfa',
            'name': 'Alfa Romeo',
            'nationality': 'Swiss',
            'url': 'http://en.wikipedia.org/wiki/Alfa_Romeo_in_Formula_One',
          }),
        ]),
        'Driver': dict({
          'code': 'ZHO',
          'dateOfBirth': '1999-05-30',
          'driverId': 'zhou',
          'familyName': 'Zhou',
          'givenName': 'Guanyu',
          'nationality': 'Chinese',
          'permanentNumber': '24',
          'url': 'http://en.wikipedia.org/wiki/Zhou_Guanyu',
        }),
        'points': '6',
        'position': '18',
        'positionText': '18',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'haas',
            'name': 'Haas F1 Team',
            'nationality': 'American',
            'url': 'http://en.wikipedia.org/wiki/Haas_F1_Team',
          }),
        ]),
        'Driver': dict({
          'code': 'MAG',
          'dateOfBirth': '1992-10-05',
          'driverId': 'kevin_magnussen',
          'familyName': 'Magnussen',
          'givenName': 'Kevin',
          'nationality': 'Danish',
          'permanentNumber': '20',
          'url': 'http://en.wikipedia.org/wiki/Kevin_Magnussen',
        }),
        'points': '3',
        'position': '19',
        'positionText': '19',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alphatauri',
            'name': 'AlphaTauri',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_AlphaTauri',
          }),
        ]),
        'Driver': dict({
          'code': 'LAW',
          'dateOfBirth': '2002-02-11',
          'driverId': 'lawson',
          'familyName': 'Lawson',
          'givenName': 'Liam',
          'nationality': 'New Zealander',
          'permanentNumber': '40',
          'url': 'http://en.wikipedia.org/wiki/Liam_Lawson',
        }),
        'points': '2',
        'position': '20',
        'positionText': '20',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'williams',
            'name': 'Williams',
            'nationality': 'British',
            'url': 'http://en.wikipedia.org/wiki/Williams_Grand_Prix_Engineering',
          }),
        ]),
        'Driver': dict({
          'code': 'SAR',
          'dateOfBirth': '2000-12-31',
          'driverId': 'sargeant',
          'familyName': 'Sargeant',
          'givenName': 'Logan',
          'nationality': 'American',
          'permanentNumber': '2',
          'url': 'http://en.wikipedia.org/wiki/Logan_Sargeant',
        }),
        'points': '1',
        'position': '21',
        'positionText': '21',
        'wins': '0',
      }),
      dict({
        'Constructors': list([
          dict({
            'constructorId': 'alphatauri',
            'name': 'AlphaTauri',
            'nationality': 'Italian',
            'url': 'http://en.wikipedia.org/wiki/Scuderia_AlphaTauri',
          }),
        ]),
        'Driver': dict({
          'code': 'DEV',
          'dateOfBirth': '1995-02-06',
          'driverId': 'de_vries',
          'familyName': 'de Vries',
          'givenName': 'Nyck',
          'nationality': 'Dutch',
          'permanentNumber': '21',
          'url': 'http://en.wikipedia.org/wiki/Nyck_de_Vries',
        }),
        'points': '0',
        'position': '22',
        'positionText': '22',
        'wins': '0',
      }),
    ]),
    'round': 22,
    'season': 2023,
  })
# ---
